<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="task"
            type="android.soding.com.sodingapp.Objects.Task"/>
        <variable
            name="viewModel"
            type="android.soding.com.sodingapp.ViewModel.TaskViewModel" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TV_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@{task.mName}"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TV_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{task.mDescription}"
            android:layout_marginLeft="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/created" />

            <TextView
                android:id="@+id/TV_item_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{task.getDateCreated()}"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/updated" />

            <TextView
                android:id="@+id/TV_item_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{task.getDateUpdated()}"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/IB_item_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_edit" />
            <!--android:onClick="@{() -> viewModel.show_update_dialog()}"-->


        <ImageButton
            android:id="@+id/IB_item_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_delete" />

    </LinearLayout>

</LinearLayout>
</layout>