<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="1000dp"
    android:minHeight="1000dp"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="android.soding.com.sodingapp.Fragments.AddUpdateTaskFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TIL_Dialog_Add_update_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/ET_Dialog_Add_update_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TIL_Dialog_Add_update_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/ET_Dialog_Add_update_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/Btn_Dialog_Add_update_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/save" />

</LinearLayout>
